# naturals-online-store-backend

backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyprojects.toml  requirements.txt
backend/app/: main.py
backend/app/crud/: categories.py  products.py  ratings.py  users.py
backend/app/db/: database.py  session.py
backend/app/models/: __init__.py  brands.py  categories.py  payment_methods.py  product_images.py  products.py  ratings.py  user_payment_methods.py  user_ranks.py  users.py
backend/app/routers/: categories.py  products.py  ratings.py  users.py
backend/app/schemas/: categories.py  products.py  ratings.py  users.py
backend/app/utils/: storage.py
